Import user translations (2021/02/18)

--- a/manager/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/src/main/res/values-pt-rBR/strings.xml
@@ -8,4 +8,87 @@
     <string name="grant_dialog_button_deny">Negar</string>
     <string name="grant_dialog_button_allow_always">Permitir o tempo todo</string>
     <string name="permission_warning_template">Permitir que o app &lt;b&gt;%1$s&lt;/b&gt; %2$s\?</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Abrir Shizuku</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; tem suporte a Shizuku moderno, mas está solicitando o Shizuku legado. Isso pode acontecer porque o Shizuku não está funcionando, verifique no aplicativo Shizuku.&lt;p&gt;O Shizuku legado foi descontinuado desde março de 2019.</string>
+    <string name="dialog_requesting_legacy_title">%1$s está pedindo o Shizuku legado</string>
+    <string name="dialog_legacy_not_support_message">O Shizuku legado está obsoleto desde março de 2019. Além disso, o Shizuku legado não funciona em sistemas Android mais recentes.&lt;p&gt;Peça ao desenvolvedor de &lt;b&gt;%1$s&lt;/b&gt; para atualizar.</string>
+    <string name="dialog_legacy_not_support_title">%1$s não suporta as versões novas do Shizuku</string>
+    <string name="toast_copied_to_clipboard_with_text"><b>%s</b> copiado com sucesso.</string>
+    <string name="toast_copied_to_clipboard">%s
+\nfoi copiado com sucesso.</string>
+    <string name="dialog_cannot_open_browser_title">Não consigo iniciar o navegador</string>
+    <string name="start_with_root_failed">Não é possível iniciar o serviço porque a permissão de root não foi concedida ou este aparelho não está rooteado.</string>
+    <string name="starter">Iniciante</string>
+    <string name="permission_description">Permita que o aplicativo use o Shizuku.</string>
+    <string name="permission_label">acessar Shizuku</string>
+    <string name="notification_working">Em andamento…</string>
+    <string name="notification_service_start_no_root">Falha ao solicitar acesso ao root.</string>
+    <string name="notification_service_start_failed">Falha ao iniciar o serviço do Shizuku.</string>
+    <string name="notification_service_starting">O serviço do Shizuku está iniciando…</string>
+    <string name="notification_channel_service_status">Status de início do serviço</string>
+    <string name="dialog_stop_message">O serviço do Shizuku será interrompido.</string>
+    <string name="action_stop">Parar o Shizuku</string>
+    <string name="about_view_source_code">Ver o código-fonte no %s</string>
+    <string name="action_about">Sobre</string>
+    <string name="settings_start_on_boot_summary">Para dispositivos com acesso root, o Shizuku é capaz de abrir automaticamente na inicialização do sistema</string>
+    <string name="settings_start_on_boot">Iniciar APP no boot (apenas com root)</string>
+    <string name="settings_translation_summary_percentage">" (%s já foi traduzido)"</string>
+    <string name="settings_translation_summary">Ajude-nos à traduzir %s para o seu idioma</string>
+    <string name="settings_translation">Contribua com a tradução</string>
+    <string name="settings_translation_contributors">Tradutores deste APP</string>
+    <string name="settings_startup">Inicialização</string>
+    <string name="settings_black_night_theme_summary">Use o tema preto puro se o modo escuro estiver habilitado. Em telas AMOLED, economiza bateria</string>
+    <string name="settings_black_night_theme">Tema preto AMOLED</string>
+    <string name="settings_user_interface">Aparência</string>
+    <string name="settings_language">Idioma</string>
+    <string name="settings_title">Configurações</string>
+    <string name="app_management_item_summary_requires_root">* precisa do Shizuku executado com privilégios de root</string>
+    <string name="app_management_dialog_adb_is_limited_message">É bem provável que o fabricante do seu dispositivo limite a permissão do ADB.&lt;p&gt;Pode haver uma solução para seu sistema &lt;b&gt;&lt;a href=\"%1$s\"&gt;neste documento&lt;/a&gt;&lt;/b&gt;.</string>
+    <string name="app_management_dialog_adb_is_limited_title">A permissão do ADB é limitada</string>
+    <string name="app_management_menu_get_more">Pegue mais</string>
+    <string name="home_learn_more_description">Aprenda a desenvolver com Shizuku ou obter aplicativos usando Shizuku</string>
+    <string name="home_learn_more_title">Aprenda sobre Shizuku</string>
+    <string name="home_app_management_view_authorized_apps">Toque para gerenciar os aplicativos autorizados</string>
+    <plurals name="home_app_management_authorized_apps_count">
+        <item quantity="one">%d aplicativo autorizado</item>
+        <item quantity="other">%d aplicativos autorizados</item>
+    </plurals>
+    <string name="home_app_management_title">Gerenciador de aplicativos</string>
+    <string name="home_root_button_restart">Reiniciar</string>
+    <string name="home_root_button_start">Começar</string>
+    <string name="home_root_description_sui">Se você estiver usando Magisk, você pode tentar %1$s (um módulo Riru). Para usuários rooteados, ele eventualmente substituirá Shizuku. Observe: os aplicativos existentes precisam mudar um pouco para usar %2$s.</string>
+    <string name="home_root_description">Além disso, o Shizuku pode ser iniciado automaticamente ao ligar o aparelho. Caso contrário, verifique se o seu sistema ou ferramentas de terceiros restringem Shizuku.&lt;br&gt;Você pode se referir a %s.</string>
+    <string name="home_root_title">Começar (para aparelhos rooteados)</string>
+    <string name="development_settings">Opções do Desenvolvedor</string>
+    <string name="adb_pair_required">Execute o primeiro passo de pareamento.</string>
+    <string name="adb_error_key_store">Incapaz de gerar a chave para a Depuração via Wireless.
+\nIsso pode ocorrer porque o mecanismo que armazena as chaves deste aparelho está quebrado.</string>
+    <string name="adb_pairing_requires_multi_window_reason">O sistema necessita da caixa de diálogo de pareamento sempre visível. Usar o modo de tela dividida é a única maneira de deixar este aplicativo e a caixa de diálogo do sistema visíveis ao mesmo tempo.</string>
+    <string name="adb_pairing_requires_multi_window">Primeiramente, ative o modo de janela dividida, por favor.</string>
+    <string name="dialog_adb_pairing_message">Comece o pareamento seguindo às etapas: \"Opções do Desenvolvedor\" → \"Depuração por Wi-Fi\" → \"Parear aparelho usando um código de pareamento\".
+\n
+\nApós o início do pareamento, você poderá colocar o código de pareamento gerado.</string>
+    <string name="dialog_wireless_adb_not_enabled">A Depuração via Wireless não está ativada.
+\nObserve que, antes do Android 11, para habilitar a Depuração via Wireless a conexão com um computador é obrigatória.</string>
+    <string name="cannot_connect_port">Não é possível conectar ao serviço de Depuração via Wireless.</string>
+    <string name="paring_code_is_wrong">O código de pareamento está errado.</string>
+    <string name="dialog_adb_pairing_paring_code">Código de pareamento</string>
+    <string name="dialog_adb_pairing_discovery">Procurando o serviço de pareamento</string>
+    <string name="dialog_adb_pairing_title">Parear com o dispositivo</string>
+    <string name="adb_pairing">Pareamento</string>
+    <string name="dialog_adb_port">Porta</string>
+    <string name="dialog_adb_invalid_port">A porta é um número inteiro que varia de 1 a 65535.</string>
+    <string name="dialog_adb_discovery_message">Por favor, ative \"Depuração via Wireless\" ou \"Depuração via Wi-Fi\" nas \"Opções do Desenvolvedor\". A Depuração via Wireless é, automaticamente, desativada ao trocar de rede.
+\n
+\nObserve, não desative \"Opções do Desenvolvedor\" ou \"Depuração via USB\", ou o Shizuku será interrompido.</string>
+    <string name="dialog_adb_discovery">Procurando o serviço de Depuração via Wireless</string>
+    <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Existem algumas outras considerações, por favor confirme se você leu o documento de ajuda primeiro.</string>
+    <string name="home_wireless_adb_description">No Android 11, a Depuração via Wireless é um recurso nativo. Por favor, consulte &lt;b&gt;&lt;a href=\"%1$s\"&gt;este documento de ajuda&lt;/a&gt;&lt;/b&gt;.&lt;p&gt;Isso funciona para todas as versões do Android. Mas antes do Android 11, a Depuração via Wireless não podia ser ativada diretamente.</string>
+    <string name="home_wireless_adb_title">Começar pela Depuração via Wireless</string>
+    <string name="home_adb_dialog_view_command_button_send">Enviar</string>
+    <string name="home_adb_dialog_view_command_copy_button">Copiar</string>
+    <string name="home_adb_button_view_command">Ver o comando</string>
+    <string name="home_adb_button_view_help">Leia a ajuda</string>
+    <string name="home_adb_description">Para aparelhos sem ROOT, será necessário usar o ADB para iniciar o Shizuku (requer conexão ao computador). Este processo precisa ser repetido sempre que o aparelho é reiniciado. Por favor <b><a href="%1$s">leia a ajuda</a></b>.</string>
+    <string name="home_adb_title">Comece conectando-se a um computador</string>
 </resources>
