--- a/manager/src/main/res/values-ru/strings.xml
+++ b/manager/src/main/res/values-ru/strings.xml
@@ -88,9 +88,9 @@
     <string name="settings_start_on_boot_summary">На устройствах с правами суперпользователя, Shizuku может запускаться автоматически при загрузке</string>
     <string name="settings_start_on_boot">Старт при загрузке (права суперпользователя)</string>
     <string name="settings_translation_summary_percentage">" (%s переведено)"</string>
-    <string name="magisk_module">модуль Magisk</string>
-    <string name="home_root_description_magisk">Если по-прежнему не удается разрешить вашей системе запускать Shizuku при загрузке, вы можете попробовать использовать %s.</string>
     <string name="grant_dialog_button_allow_always">grant_dialog_button_allow_always</string>
     <string name="grant_dialog_button_deny">Запретить</string>
-    <string name="permission_warning_template"><![CDATA[Разрешить приложению &lt;b&gt;%1$s&lt;/b&gt; %2$s?]]></string>
+    <string name="permission_warning_template">Разрешить <b>%1$s</b> следующее: %2$s\?</string>
+    <string name="home_root_description_sui">Если вы пользуетесь Magisk, можете попробовать %1$s (модуль Riru). Для пользователей с root правами он в конечном итоге заменит Shizuku. Обратите внимание, что в уже вышедшие приложения должны внести небольшие изменения, чтобы они заработали с %2$s.</string>
+    <string name="permission_description">Разрешить приложению использовать Shizuku.</string>
 </resources>
