--- a/manager/src/main/res/values-ru/strings.xml
+++ b/manager/src/main/res/values-ru/strings.xml
@@ -1,94 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="dialog_requesting_legacy_button_open_shizuku">Открыть Shizuku</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; имеет поддержку современного Shizuku, но он запрашивает старую версию Shizuku. Это может быть потому, что Shizuku не работает, пожалуйста, проверьте в приложении Shizuku.&lt;p&gt;Старая версия Shizuku была обьявлена устаревшей в марте 2019.</string>
-    <string name="dialog_requesting_legacy_title">%1$s запрашивает старую версию Shizuku</string>
-    <string name="dialog_legacy_not_support_message">Старая версия Shizuku была обьявлена устаревшей в марте 2019. Кроме того, старая версия Shizuku не работает на новых системах Android.&lt;p&gt;Пожалуйста, попросите разработчика &lt;b&gt;%1$s&lt;/b&gt; обновить версию.</string>
-    <string name="dialog_legacy_not_support_title">%1$s не поддерживает новую версию Shizuku</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; имеет поддержку актуального Shizuku, но запрашивает его устаревшую версию. Возможно это происходит оттого, что Shizuku не запущен, пожалуйста, перепроверьте в приложении Shizuku.&lt;p&gt;Изначальная версия Shizuku признана устаревшей ещё в марте 2019 года.</string>
+    <string name="dialog_requesting_legacy_title">%1$s запрашивает устаревшую версию Shizuku</string>
+    <string name="dialog_legacy_not_support_message">Изначальная версия Shizuku устарела с марта 2019 года. Кроме того, она не работает на новых системах Android.&lt;p&gt;Пожалуйста, попросите разработчика &lt;b&gt;%1$s&lt;/b&gt; внести поправки.</string>
+    <string name="dialog_legacy_not_support_title">%1$s не поддерживает актуальную версию Shizuku</string>
     <string name="toast_copied_to_clipboard_with_text">&lt;b&gt;%s&lt;/b&gt; было скопировано в буфер обмена.</string>
     <string name="toast_copied_to_clipboard">%s
 \nбыло скопировано в буфер обмена.</string>
     <string name="dialog_cannot_open_browser_title">Не удается запустить браузер</string>
-    <string name="start_with_root_failed">Невозможно запустить сервис. Права суперпользователя не предоставлены или устройство не имеет прав суперпользователя.</string>
+    <string name="start_with_root_failed">Не удалось запустить службу. Root права не выданы или они недоступны на устройстве.</string>
     <string name="starter">Запуск</string>
     <string name="permission_label">доступ Shizuku</string>
     <string name="notification_working">Работает…</string>
-    <string name="notification_service_start_no_root">Не удалось запросить права суперпользователя.</string>
-    <string name="notification_service_start_failed">Не удалось запустить Shizuku.</string>
-    <string name="notification_service_starting">Сервис Shizuku запускается…</string>
-    <string name="notification_channel_service_status">Статус запуска службы</string>
-    <string name="dialog_stop_message">Сервис Shizuku был остановлен.</string>
+    <string name="notification_service_start_no_root">Не удалось запросить root права.</string>
+    <string name="notification_service_start_failed">Не удалось запустить службу Shizuku.</string>
+    <string name="notification_service_starting">Служба Shizuku запускается…</string>
+    <string name="notification_channel_service_status">Состояние работы службы</string>
+    <string name="dialog_stop_message">Служба Shizuku будет остановлена.</string>
     <string name="action_stop">Остановить Shizuku</string>
-    <string name="about_view_source_code">Исходный код %s</string>
+    <string name="about_view_source_code">Исходный код доступен на %s</string>
     <string name="action_about">О приложении</string>
     <string name="settings_translation_summary">Помогите перевести %s на ваш язык</string>
     <string name="settings_translation">Участвуйте в переводе</string>
     <string name="settings_translation_contributors">Авторы перевода</string>
-    <string name="settings_startup">Запуск</string>
-    <string name="settings_black_night_theme_summary">Используйте черную тему, если включен ночной режим</string>
-    <string name="settings_black_night_theme">Чёрная тема</string>
+    <string name="settings_startup">Запуск при включении устройства</string>
+    <string name="settings_black_night_theme_summary">Глубокий черный цвет фона при работе темной темы</string>
+    <string name="settings_black_night_theme">Черная тема</string>
     <string name="settings_user_interface">Внешний вид</string>
     <string name="settings_language">Язык</string>
     <string name="settings_title">Настройки</string>
-    <string name="app_management_item_summary_requires_root">* требуется Shizuku, запущенный с правами суперпользователя</string>
-    <string name="app_management_dialog_adb_is_limited_message">Возможно, что производитель вашего устройства ограничивает разрешение adb.&lt;p&gt;Решение для вашей системы может быть &lt;b&gt;&lt;a href=\"%1$s\"&gt;здесь&lt;/a&gt;&lt;/b&gt;.</string>
+    <string name="app_management_item_summary_requires_root">* требуется Shizuku, запущенный с root правами</string>
+    <string name="app_management_dialog_adb_is_limited_message">Возможно, что производитель вашего устройства ограничивает доступ к adb.&lt;p&gt;Решение для вашей системы может быть описано &lt;b&gt;&lt;a href=\"%1$s\"&gt;здесь&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="app_management_dialog_adb_is_limited_title">Доступ к adb ограничен</string>
     <string name="app_management_menu_get_more">Ещё</string>
-    <string name="home_learn_more_description">Изучите как разрабатывать с Shizuku или посмотрите приложения, использующие Shizuku</string>
-    <string name="home_learn_more_title">Изучить Shizuku</string>
-    <string name="home_app_management_view_authorized_apps">Нажмите, чтобы управлять авторизованными приложениями</string>
+    <string name="home_learn_more_description">Узнайте, как начать разрабатывать с Shizuku или посмотрите примеры уже вышедших приложений, использующих Shizuku</string>
+    <string name="home_learn_more_title">Узнать больше о Shizuku</string>
+    <string name="home_app_management_view_authorized_apps">Нажмите для управления списком допущенных приложений</string>
     <plurals name="home_app_management_authorized_apps_count">
-        <item quantity="one">Авторизовано %d приложениe</item>
-        <item quantity="few">Авторизовано %d приложения</item>
-        <item quantity="many">Авторизовано %d приложений</item>
-        <item quantity="other">Авторизовано %d приложений</item>
+        <item quantity="one">Доступно для %d приложения</item>
+        <item quantity="few">Доступно для %d приложений</item>
+        <item quantity="many">Доступно для %d приложений</item>
+        <item quantity="other">Доступно для %d приложений</item>
     </plurals>
     <string name="home_app_management_title">Управление приложениями</string>
-    <string name="home_root_button_restart">Перезапуск</string>
-    <string name="home_root_button_start">Запуск</string>
-    <string name="home_root_description">Кроме того, Shizuku может быть запущена автоматически при загрузке. Если нет, пожалуйста проверьте ограничивают ли система или сторонние инструменты Shizuku.&lt;br&gt;Вы можете обратиться к %s.</string>
-    <string name="home_root_title">Запуск (требуются права суперпользователя)</string>
-    <string name="development_settings">Настройки для разработчиков</string>
-    <string name="adb_pair_required">Пожалуйста, сначала выполните шаг сопряжения.</string>
-    <string name="adb_error_key_store">Невозможно сгенерировать ключ для беспроводной отладки.
-\nЭто может быть связано с тем, что механизм хранилища ключей этого устройства сломан.</string>
-    <string name="adb_pairing_requires_multi_window_reason">Система требует, чтобы диалог сопряжения всегда был виден, использование режима разделения экрана - это единственный способ сделать это приложение и системный диалог видимыми одновременно.</string>
-    <string name="adb_pairing_requires_multi_window">Пожалуйста, сначала войдите в режим разделения экрана (многооконный).</string>
-    <string name="dialog_adb_pairing_message">Пожалуйста, для подключения выполните следующие шаги: \"Настройки для разработчиков\" - \"Беспроводная отладка\" - \"Подключение устройства используя код\".
-\n
-\nПосле запуска процесса сопряжения вы сможете ввести код сопряжения.</string>
-    <string name="dialog_wireless_adb_not_enabled">Беспроводная отладка не включена.
-\nОбратите внимание, что до Android 11, чтобы включить беспроводную отладку, необходимо подключение к компьютеру.</string>
-    <string name="cannot_connect_port">Не удается подключить службу беспроводной отладки.</string>
-    <string name="paring_code_is_wrong">Неправильный код сопряжения.</string>
-    <string name="dialog_adb_pairing_paring_code">Код сопряжения</string>
-    <string name="dialog_adb_pairing_discovery">Поиск службы сопряжения</string>
-    <string name="dialog_adb_pairing_title">Сопряжение с устройством</string>
-    <string name="adb_pairing">Сопряжение</string>
-    <string name="dialog_adb_invalid_port">Порт - это число от 1 до 65535.</string>
+    <string name="home_root_button_restart">Перезапустить</string>
+    <string name="home_root_button_start">Запустить</string>
+    <string name="home_root_description">В дополнение, Shizuku может запускаться сразу после загрузки системы. Если этого не происходит, проверьте, нет ли ограничений со стороны вашей системы или сторонних инструментов.&lt;br&gt;Вы можете обратиться в %s.</string>
+    <string name="home_root_title">Запуск (для устройств с root правами)</string>
+    <string name="development_settings">Для разработчиков</string>
+    <string name="adb_pair_required">Пожалуйста, сперва пройдите процедуру подключения.</string>
+    <string name="adb_error_key_store">Не удалось сгенерировать ключ для отладки по Wi-Fi. 
+\nВозможно, что механизм KeyStore у данного устройства нерабочий.</string>
+    <string name="adb_pairing_requires_multi_window_reason">Системе нужно постоянно видеть диалоговое окно подключения, и многооконный режим – это единственный способ вывести на экран и это приложение, и системное окно одновременно.</string>
+    <string name="adb_pairing_requires_multi_window">Пожалуйста, сначала активируйте режим разделения экрана (многооконный режим).</string>
+    <string name="dialog_adb_pairing_message">Пожалуйста, для подключения выполните следующие шаги: «Для разработчиков» – «Отладка по Wi-Fi» – «Подключиться к устройству, используя код». 
+\n 
+\nПосле начала процесса вы сможете ввести код подключения.</string>
+    <string name="dialog_wireless_adb_not_enabled">Отладка по Wi-Fi не включена.
+\nВнимание: на системах старше Android 11 для включения этой отладки необходимо соединение с компьютером.</string>
+    <string name="cannot_connect_port">Не удается подключиться к службе отладки по Wi-Fi.</string>
+    <string name="paring_code_is_wrong">Неверный код подключения.</string>
+    <string name="dialog_adb_pairing_paring_code">Код подключения</string>
+    <string name="dialog_adb_pairing_discovery">Ожидание службы соединения</string>
+    <string name="dialog_adb_pairing_title">Подключение к устройству</string>
+    <string name="adb_pairing">Подключение</string>
+    <string name="dialog_adb_invalid_port">Порт – это целое число в диапазоне от 1 до 65535.</string>
     <string name="dialog_adb_port">Порт</string>
-    <string name="dialog_adb_discovery_message">Please enable \"Беспроводная отладка\" в \"Настройки для разработчиков\". \"Беспроводная отладка\" автоматически отключается при изменении сети.
-\n
-\nПримечание, не отключайте \"Настройки для разработчиков\" или \"Отладка по USB\", иначе Shizuku будет остановлен.</string>
-    <string name="dialog_adb_discovery">Поиск службы беспроводной отладки</string>
-    <string name="home_wireless_adb_description">В Android 11, беспроводная отладка встроенная функция. Пожалуйста, ознакомтесь с &lt;b&gt;&lt;a href=\"%1$s\"&gt;этой справкой&lt;/a&gt;&lt;/b&gt;.&lt;p&gt;Это работает на всех версиях системы. Но до Android 11 беспроводная отладка не может быть включена напрямую.</string>
-    <string name="home_wireless_adb_title">Запуск через беспроводную отладку</string>
-    <string name="home_adb_dialog_view_command_button_send">Отправить</string>
-    <string name="home_adb_dialog_view_command_copy_button">Копировать</string>
-    <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Есть другие способы. Пожалуйста, убедитесь, что вы прочитали справку.</string>
-    <string name="home_adb_button_view_command">Смотреть команды</string>
+    <string name="dialog_adb_discovery_message">Пожалуйста, включите пункт «Отладка по Wi-Fi» в меню «Для разработчиков». «Отладка по Wi-Fi» автоматически отключается при изменении сети. 
+\n 
+\nВнимание: не отключайте пункт «Для разработчиков» или «Отладка по USB», иначе Shizuku остановит работу.</string>
+    <string name="dialog_adb_discovery">Ожидание службы отладки по Wi-Fi</string>
+    <string name="home_wireless_adb_description">Для Android 11 «Отладка по Wi-Fi» – это предустановленная возможность. Пожалуйста, ознакомьтесь с &lt;b&gt;&lt;a href=\"%1$s\"&gt;этим справочным материалом&lt;/a&gt;&lt;/b&gt;.&lt;p&gt;Функция доступна на всех версиях системы, но на системах старше Android 11 отладка по Wi-Fi не может включаться напрямую.</string>
+    <string name="home_wireless_adb_title">Запуск через отладку по Wi-Fi</string>
+    <string name="home_adb_dialog_view_command_button_send">Поделиться</string>
+    <string name="home_adb_dialog_view_command_copy_button">Скопировать</string>
+    <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Есть и другие способы; сначала убедитесь, что прочли справку.</string>
+    <string name="home_adb_button_view_command">Просмотр команды</string>
     <string name="home_adb_button_view_help">Читать справку</string>
-    <string name="home_adb_description">Для устройств с правами суперпользователя необходимо использовать adb для запуска Shizuku (требуется подключение к компьютеру). Этот процесс необходимо повторять каждый раз при перезапуске устройства. Пожалуйста, &lt;b&gt;&lt;a href=\"%1$s\"&gt;прочтите справку&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="home_adb_title">Запуск через подключение к компьютеру</string>
-    <string name="home_status_service_version_update">Версия %2$d, %1$s&lt;br&gt;Попробуйте снова, обновив до версии %3$d</string>
+    <string name="home_adb_description">Для устройств без root прав потребуется обращаться к adb для запуска Shizuku (не обойтись без соединения с компьютером). Этот процесс нужно повторять каждый раз, когда устройство перезагружается. Пожалуйста, <b><a href="%1$s">прочтите справку</a></b>.</string>
+    <string name="home_adb_title">Запуск через соединение с ПК</string>
+    <string name="home_status_service_version_update">Версия %2$d, %1$s&lt;br&gt;Обновитесь до версии %3$d и запустите снова</string>
     <string name="home_status_service_version">Версия %2$d, %1$s</string>
     <string name="home_status_service_not_running">%1$s не запущен</string>
     <string name="home_status_service_is_running">%1$s запущен</string>
-    <string name="translation_contributors">sermart1234</string>
-    <string name="settings_start_on_boot_summary">На устройствах с правами суперпользователя, Shizuku может запускаться автоматически при загрузке</string>
-    <string name="settings_start_on_boot">Старт при загрузке (права суперпользователя)</string>
+    <string name="translation_contributors">sermart1234, ruvlad</string>
+    <string name="settings_start_on_boot_summary">На устройствах с root правами Shizuku может автоматически запускаться после загрузки системы</string>
+    <string name="settings_start_on_boot">Автозагрузка (root права)</string>
     <string name="settings_translation_summary_percentage">" (%s переведено)"</string>
-    <string name="grant_dialog_button_allow_always">grant_dialog_button_allow_always</string>
+    <string name="grant_dialog_button_allow_always">Разрешить всегда</string>
     <string name="grant_dialog_button_deny">Запретить</string>
     <string name="permission_warning_template">Разрешить <b>%1$s</b> следующее: %2$s\?</string>
     <string name="home_root_description_sui">Если вы пользуетесь Magisk, можете попробовать %1$s (модуль Riru). Для пользователей с root правами он в конечном итоге заменит Shizuku. Обратите внимание, что в уже вышедшие приложения должны внести небольшие изменения, чтобы они заработали с %2$s.</string>
