--- a/manager/src/main/res/values-b+es+419/strings.xml
+++ b/manager/src/main/res/values-b+es+419/strings.xml
@@ -7,7 +7,7 @@
     <string name="dialog_adb_discovery_message">Habilite \"Depuración inalámbrica\" en \"Opciones de desarrollador\". La \"depuración inalámbrica\" se desactiva automáticamente cuando cambia la red.
 \n
 \nTenga en cuenta que no desactive las \"Opciones de desarrollador\" o la \"Depuración USB\", o Shizuku se detendrá.</string>
-    <string name="home_status_service_version_update">Versión %2$d, %1$s&lt;br&gt;Vuelva a empezar para actualizar a la versión %3$d</string>
+    <string name="home_status_service_version_update">Versión %2$s, %1$s&lt;br&gt;Vuelva a empezar para actualizar a la versión %3$s</string>
     <string name="dialog_requesting_legacy_button_open_shizuku">Abrir Shizuku</string>
     <string name="action_about">Acerca de</string>
     <string name="settings_translation_summary_percentage">" (%s están traducidos)"</string>
@@ -25,7 +25,7 @@
     <string name="home_adb_button_view_help">Ver ayuda</string>
     <string name="home_adb_description">Para dispositivos sin root, usted necesita ADB para ejecutar Shizuku (requiere una conexión a un ordenador). Este proceso se debe repetir cada vez que el dispositivo sea reiniciando. &lt;b&gt;&lt;a href=\"%1$s\"&gt;obtener más ayuda&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="home_adb_title">Empiece por conectarse a su computador</string>
-    <string name="home_status_service_version">Versión %2$d, %1$s</string>
+    <string name="home_status_service_version">Versión %2$s, %1$s</string>
     <string name="home_status_service_not_running">%1$s no está activo</string>
     <string name="home_status_service_is_running">%1$s está activo</string>
     <string name="translation_contributors">—Peter Cuevas</string>
