--- a/manager/src/main/res/values-de/strings.xml
+++ b/manager/src/main/res/values-de/strings.xml
@@ -10,8 +10,8 @@
     <string name="home_adb_description">Für Geräte ohne root Zugriff, müssen Sie adb verwenden um Shizuku zu starten (erfordert eine Computerverbindung). Dieser Vorgang muss bei jedem Neustart des Geräts wiederholt werden. Bitte, &lt;b&gt;&lt;a href=\"%1$s\"&gt;Lesen Sie das Hilfsdokument&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="home_adb_button_view_help">Lesen Sie das Hilfe-Dokument</string>
     <string name="home_adb_title">Starten, indem Sie eine Verbindung zu einem Computer herstellen</string>
-    <string name="home_status_service_version_update">Version %2$d, %1$s&lt;br&gt;Starten Sie erneut, um auf Version %3$d zu aktualisieren</string>
-    <string name="home_status_service_version">Version %2$d, %1$s</string>
+    <string name="home_status_service_version_update">Version %2$s, %1$s&lt;br&gt;Starten Sie erneut, um auf Version %3$s zu aktualisieren</string>
+    <string name="home_status_service_version">Version %2$s, %1$s</string>
     <string name="home_status_service_not_running">%1$s beendet</string>
     <string name="home_status_service_is_running">%1$s läuft</string>
     <string name="app_management_dialog_adb_is_limited_title">Die ADB-Berechtigungen sind beschränkt</string>
