--- a/manager/src/main/res/values-es-rCL/strings.xml
+++ b/manager/src/main/res/values-es-rCL/strings.xml
@@ -7,7 +7,7 @@
     <string name="home_adb_button_view_help">Ver ayuda</string>
     <string name="home_adb_button_view_command">Ver comando</string>
     <string name="home_adb_description">Para dispositivos sin root, usted necesita ADB para ejecutar Shizuku (requiere una conexión a un ordenador). Este proceso se debe repetir cada vez que el dispositivo sea reiniciando. &lt;b&gt;&lt;a href=\"%1$s\"&gt;obtener más ayuda&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="home_status_service_version">Versión %2$d, %1$s</string>
+    <string name="home_status_service_version">Versión %2$s, %1$s</string>
     <string name="home_status_service_not_running">%1$s no está activo</string>
     <string name="home_status_service_is_running">%1$s está activo</string>
     <string name="dialog_requesting_legacy_button_open_shizuku">Abrir Shizuku</string>
