--- a/manager/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/src/main/res/values-pt-rBR/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="home_status_service_version_update">Versão %2$d, %1$s&lt;br&gt;Reinicie para atualizar para a versão %3$d</string>
-    <string name="home_status_service_version">Versão %2$d, %1$s</string>
+    <string name="home_status_service_version_update">Versão %2$s, %1$s&lt;br&gt;Reinicie para atualizar para a versão %3$s</string>
+    <string name="home_status_service_version">Versão %2$s, %1$s</string>
     <string name="home_status_service_not_running">%1$s não está rodando</string>
     <string name="home_status_service_is_running">%1$s está rodando</string>
     <string name="translation_contributors">Marcio de Andrade</string>
