--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -3,8 +3,8 @@
     <string name="permission_label">使用 Shizuku</string>
     <string name="permission_description">允許應用程式使用 Shizuku。</string>
     <string name="home_status_service_is_running">%1$s 正在運作</string>
-    <string name="home_status_service_version">版本 %2$d，%1$s</string>
-    <string name="home_status_service_version_update">版本 %2$d，%1$s&lt;br&gt;再次啟動來升級到版本 %3$d</string>
+    <string name="home_status_service_version">版本 %2$s，%1$s</string>
+    <string name="home_status_service_version_update">版本 %2$s，%1$s&lt;br&gt;再次啟動來升級到版本 %3$s</string>
     <string name="home_status_service_not_running">%1$s 沒有運作</string>
     <string name="home_root_button_start">啟動</string>
     <string name="home_root_button_restart">重新啟動</string>
