--- a/manager/src/main/res/values-de/strings.xml
+++ b/manager/src/main/res/values-de/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="dialog_adb_discovery">Suche nach wireless debugging service</string>
+    <string name="dialog_adb_discovery">Suche nach drahtlosem Debugging-Dienst</string>
     <string name="home_wireless_adb_description">In Android 11 ist Wireless Debugging eine integrierte Funktion. Bitte beziehen Sie sich auf &lt;b&gt;&lt;a href=\"%1$s\"&gt;dieses Hilfsdokument&lt;/a&gt;&lt;/b&gt;.&lt;p&gt;Dies funktioniert mit allen Systemversionen. In Versionen vor Android 11 kann Wireless Debugging jedoch nicht direkt aktiviert werden.</string>
     <string name="home_wireless_adb_title">Per Wireless Debugging starten</string>
     <string name="home_adb_dialog_view_command_button_send">Senden</string>
     <string name="home_adb_dialog_view_command_copy_button">Kopieren</string>
     <string name="home_adb_dialog_view_command_message">&lt;font face=monospace&gt;%1$s&lt;/font&gt;&lt;br&gt;&lt;br&gt;* Es gibt noch einige andere Möglichkeiten. Bitte bestätigen Sie, dass Sie das Hilfsdokument bereits gelesen haben.</string>
-    <string name="home_adb_button_view_command">Command anzeigen</string>
-    <string name="home_adb_description">Für Geräte ohne root Zugriff, müssen Sie adb verwenden um Shizuku zu starten (erfordert eine Computerverbindung). Dieser Vorgang muss bei jedem Neustart des Geräts wiederholt werden. Bitte, &lt;b&gt;&lt;a href=\"%1$s\"&gt;Lesen Sie das Hilfsdokument&lt;/a&gt;&lt;/b&gt;.</string>
+    <string name="home_adb_button_view_command">Befehl anzeigen</string>
+    <string name="home_adb_description">Für Geräte ohne Root-Zugriff müssen Sie ADB verwenden, um Shizuku zu starten (erfordert eine Computerverbindung). Dieser Vorgang muss nach jedem Neustart des Geräts wiederholt werden. Bitte <b><a href="%1$s">lesen Sie das Hilfsdokument</a></b>.</string>
     <string name="home_adb_button_view_help">Lesen Sie das Hilfe-Dokument</string>
     <string name="home_adb_title">Starten, indem Sie eine Verbindung zu einem Computer herstellen</string>
     <string name="home_status_service_version_update">Version %2$s, %1$s&lt;br&gt;Starten Sie erneut, um auf Version %3$s zu aktualisieren</string>
@@ -15,7 +15,7 @@
     <string name="home_status_service_not_running">%1$s beendet</string>
     <string name="home_status_service_is_running">%1$s läuft</string>
     <string name="app_management_dialog_adb_is_limited_title">Die ADB-Berechtigungen sind beschränkt</string>
-    <string name="app_management_menu_get_more">Bekommen Sie mehr</string>
+    <string name="app_management_menu_get_more">Mehr beziehen</string>
     <string name="about_view_source_code">Quelltext auf %s anzeigen</string>
     <string name="action_about">Über</string>
     <string name="action_stop">Shizuku stoppen</string>
@@ -31,35 +31,35 @@
     <string name="home_root_description">Zusätzlich kann Shizuku beim Booten automatisch gestartet werden. Falls nicht, bitte überprüfen, ob Shizuku durch Ihr System oder Tools von Drittanbietern eingeschränkt ist.&lt;br&gt;Sie können sich auf %s beziehen.</string>
     <string name="development_settings">Entwickleroptionen</string>
     <string name="adb_pairing_requires_multi_window">Bitte zuerst mit geteiltem Bildschirm öffnen (Mehrfenstermodus).</string>
-    <string name="dialog_adb_discovery_message">Bitte Wireless Debugging in Entwickleroptionen aktivieren. Wireless Debugging wird automatisch deaktiviert, wenn sich das Netzwerk ändert.
-\n
-\nHinweis: Deaktivieren Sie die Entwickleroptionen oder USB-Debugging nicht, oder Shizuku wird gestoppt.</string>
+    <string name="dialog_adb_discovery_message">Bitte \"Debugging über WLAN\" in Entwickleroptionen aktivieren. \"Debugging über WLAN\" wird automatisch deaktiviert, wenn sich das Netzwerk ändert. 
+\n 
+\nHinweis: Deaktivieren Sie die Entwickleroptionen oder USB-Debugging nicht oder Shizuku wird gestoppt.</string>
     <string name="grant_dialog_button_deny">Ablehnen</string>
     <string name="grant_dialog_button_allow_always">Immer zulassen</string>
     <string name="permission_warning_template">Zulassen, dass die Anwendung <b>%1$s</b> %2$s nutzen darf\?</string>
     <string name="translation_contributors">" "</string>
-    <string name="notification_service_start_failed">Der Shizuku Start Dienst ist fehlgeschlagen.</string>
+    <string name="notification_service_start_failed">Start des Shizuku-Dienst ist fehlgeschlagen.</string>
     <string name="notification_channel_service_status">Status des Start Dienstes</string>
     <string name="app_management_dialog_adb_is_limited_message">Es ist gut möglich, dass der Hersteller ihres Gerätes die Berechtigungen von ADB beschränkt hat.&lt;p&gt;Es gibt vielleicht eine Lösung für ihr System in &lt;b&gt;&lt;a href=\"%1$s\"&gt;diesem Dokument&lt;/a&gt;&lt;/b&gt;.</string>
-    <string name="home_root_description_sui">Falls Sie Magisk benutzen, können Sie %1$s (ein Riru-Modul) ausprobieren. Für Root Nutzer, es wird Shizuku eventuell ersetzen. Hinweis: Vorhandene Anwendungen müssen ein wenig geladen werden, um %1$s zu benuten.</string>
+    <string name="home_root_description_sui">Falls Sie Magisk benutzen, können Sie %1$s (ein Riru-Modul) ausprobieren. Für Root-Nutzer wird es Shizuku eventuell ersetzen. Hinweis: Vorhandene Anwendungen müssen ein wenig verändert werden, um %2$s zu benutzen.</string>
     <string name="adb_pairing">Kopplung</string>
     <string name="dialog_adb_port">Port</string>
-    <string name="dialog_requesting_legacy_button_open_shizuku">Öffnen Sie Shizuku</string>
-    <string name="dialog_requesting_legacy_title">%1$s fragt nach legacy Shizuku</string>
-    <string name="dialog_legacy_not_support_message">Legacy Shizuku ist seit März 2019 veraltet. Zudem funktioniert legacy Shizuku auf neueren Android Systemen nicht.&lt;p&gt;Bitte fragen Sie den Entwickler von &lt;b&gt;%1$s&lt;/b&gt; ein Update zu veröffentlichen.</string>
-    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; unterstützt modern Shizuku, aber es fragt nach legacy Shizuku. Dies könnte sein, da Shizuku nicht läuft, bitte überprüfen Sie die Shizuku Anwendung.&lt;p&gt;Legacy Shizuku ist seit März 2019 veraltet.</string>
+    <string name="dialog_requesting_legacy_button_open_shizuku">Shizuku öffnen</string>
+    <string name="dialog_requesting_legacy_title">%1$s fragt nach Legacy Shizuku</string>
+    <string name="dialog_legacy_not_support_message">Legacy Shizuku ist seit März 2019 veraltet. Zudem funktioniert Legacy Shizuku auf neueren Android Systemen nicht. &lt;p&gt;Bitten Sie den Entwickler von &lt;b&gt;%1$s&lt;/b&gt;, ein Update zu veröffentlichen.</string>
+    <string name="dialog_requesting_legacy_message">&lt;b&gt;%1$s&lt;/b&gt; unterstützt das moderne Shizuku, aber fordert Legacy Shizuku an. Dies könnte sein, da Shizuku nicht läuft, bitte überprüfen Sie die Shizuku-App. &lt;p&gt;Legacy Shizuku ist seit März 2019 veraltet.</string>
     <string name="dialog_legacy_not_support_title">%1$s unterstützt das moderne Shizuku nicht</string>
-    <string name="toast_copied_to_clipboard_with_text"><b>%s</b>wurde in die Zwischenablage kopiert.</string>
+    <string name="toast_copied_to_clipboard_with_text"><b>%s</b> wurde in die Zwischenablage kopiert.</string>
     <string name="toast_copied_to_clipboard">%s
 \nwurde in die Zwischenablage kopiert.</string>
-    <string name="dialog_cannot_open_browser_title">Kann den Browser nicht starten</string>
-    <string name="start_with_root_failed">Kann den Dienst nicht starten, da kein Root zugriff gewährt wurde oder dieses Gerät nicht gerootet ist.</string>
+    <string name="dialog_cannot_open_browser_title">Kann Browser nicht starten</string>
+    <string name="start_with_root_failed">Kann den Dienst nicht starten, da kein Root-Zugriff gewährt wurde oder dieses Gerät nicht gerootet ist.</string>
     <string name="starter">Starter</string>
     <string name="permission_description">Erlaube der Anwendung Shizuku zu nutzen.</string>
     <string name="permission_label">auf Shizuku zugreifen</string>
     <string name="notification_working">Arbeitet…</string>
-    <string name="notification_service_start_no_root">Fehler bei Root Zugriff.</string>
-    <string name="notification_service_starting">Der Shizuku Dienst startet gerade…</string>
+    <string name="notification_service_start_no_root">Root-Zugriff konnte nicht angefragt werden.</string>
+    <string name="notification_service_starting">Der Shizuku-Dienst startet gerade…</string>
     <string name="dialog_stop_message">Der Shizuku-Dienst wird gestoppt.</string>
     <string name="settings_translation">An der Übersetzung beteiligen</string>
     <string name="settings_translation_contributors">Mitwirkende</string>
@@ -71,7 +71,7 @@
     <string name="settings_language">Sprache</string>
     <string name="settings_title">Einstellungen</string>
     <string name="app_management_item_summary_requires_root">* benötigt Shizuku mit Root-Zugriff</string>
-    <string name="home_learn_more_description">Lernen Sie, wie Anwendungen mit Shizuku entwickelt werden oder bekommen Sie Anwendungen, die Shizuku nutzen</string>
+    <string name="home_learn_more_description">Lernen Sie, wie Anwendungen mit Shizuku entwickelt werden oder beziehen Sie Anwendungen, die Shizuku nutzen</string>
     <string name="home_learn_more_title">Shizuku kennenlernen</string>
     <string name="home_app_management_view_authorized_apps">Tippen, um autorisierte Anwendungen zu verwalten</string>
     <string name="home_app_management_title">Anwendungsverwaltung</string>
@@ -79,26 +79,27 @@
     <string name="home_root_button_start">Start</string>
     <string name="home_root_title">Start (für gerootete Geräte)</string>
     <string name="adb_pair_required">Bitte gehen Sie die Kopplungsschritte zuerst durch.</string>
-    <string name="adb_error_key_store">Fehler bei Generierung eines Schlüssels für \"Wireless Debugging\".
-\nViellecht ist der KeyStore Mechanismus des Gerätes beschädigt.</string>
-    <string name="adb_pairing_requires_multi_window_reason">Der Kopplungsdialog muss immer sichtbar sein, den Split-Screen Modus zu benutzen ist der einzige Weg diese App und den Systemdialog zur selben Zeit sichtbar zu lassen.</string>
-    <string name="dialog_adb_pairing_paring_code">Kopplungs-Code</string>
-    <string name="paring_code_is_wrong">Der Kopplungs-Code ist falsch.</string>
-    <string name="dialog_adb_pairing_message">Bitte starten Sie die Kopplung mit den folgenden Schritten:\"Entwickleroptionen\" - \"Wireless debugging\" - \"Kopple Gerät mit dem Kopplungs Code\".
+    <string name="adb_error_key_store">Fehler bei Generierung eines Schlüssels für drahtloses Debugging. 
+\nVielleicht ist der KeyStore-Mechanismus des Gerätes beschädigt.</string>
+    <string name="adb_pairing_requires_multi_window_reason">Der Kopplungsdialog muss immer sichtbar sein. Den Split-Screen Modus zu benutzen, ist der einzige Weg diese App und den Systemdialog zur selben Zeit sichtbar zu lassen.</string>
+    <string name="dialog_adb_pairing_paring_code">Kopplungscode</string>
+    <string name="paring_code_is_wrong">Der Kopplungscode ist falsch.</string>
+    <string name="dialog_adb_pairing_message">Bitte starten Sie die Kopplung mit den folgenden Schritten: \"Entwickleroptionen\" - \"Debugging über WLAN\" - \"Gerät über einen Kopplungscode koppeln\".
 \n
-\nNach dem Start der Kopplung, können sie den Kopplungs Code eingeben.</string>
+\nNach dem Start der Kopplung, können sie den Kopplungscode eingeben.</string>
     <string name="cannot_connect_port">Es kann keine Verbindung zum drahtlosen Debugging-Dienst hergestellt werden.</string>
     <string name="dialog_adb_pairing_discovery">Sucht nach einem Kopplungsdienst</string>
     <string name="dialog_adb_pairing_title">Mit Gerät koppeln</string>
     <string name="dialog_adb_invalid_port">Der Port ist eine ganze Zahl zwischen 0 und 65536.</string>
     <string name="terminal_tutorial_3">Schlussendlich, verschiebe die Dateien an einen beliebigen Ort, auf den deine Terminal Anwendung zugreifen kann, dann wird es dir möglich sein %1$s zu benutzen, um Befehle durch Shizuku zu erteilen.</string>
-    <string name="terminal_tutorial_2_description">Zum Beispiel, wenn du Shizuku in %1$s verwenden willst, solltest du %2$s durch %3$s (%4$s ist der Paket-Name von %1$s) ersetzen.</string>
-    <string name="terminal_tutorial_2">Dann, benutze eine Beliebigen Text Editor um %1$s zu öffnen und zu bearbeiten.</string>
-    <string name="terminal_export_files">Exportiere Dateien</string>
-    <string name="terminal_tutorial_1_description">Falls im ausgewählten Ordner Dateien mit dem selben Namen vorhanden sind, werden diese gelöscht werden.
+    <string name="terminal_tutorial_2_description">z.B. Wenn du Shizuku in %1$s verwenden willst, solltest du %2$s durch %3$s (%4$s ist der Paket-Name von %1$s) ersetzen.</string>
+    <string name="terminal_tutorial_2">Dann einen beliebigen Text-Editor verwenden, um %1$s zu öffnen und zu bearbeiten.</string>
+    <string name="terminal_export_files">Dateien exportieren</string>
+    <string name="terminal_tutorial_1_description">Falls im ausgewählten Ordner Dateien mit demselben Namen vorhanden sind, werden diese gelöscht.
 \n
-\nDie Exportieren Funktion benutzt SAF (Storage Access Framework)#. Es wurde gemeldet, dass MIUI die Funktionen von SAF verhindert. Falls du MIUI benutzt, musst du vielleicht die Datei aus Shizuku´s Apk extrahieren oder von GitHub herunterladen.</string>
-    <string name="terminal_tutorial_1">Als Erstes, Exportiere die Dateien an einen beliebigen Ort. Du wirst zwei Dateien finden, %1$s und %2$s.</string>
+\nDie Exportfunktion verwendet SAF (Storage Access Framework). Es wurde berichtet, dass MIUI die Funktionen von SAF verhindert. Falls Sie MIUI verwenden, müssen Sie die Datei möglicherweise aus Shizuku\'s Apk extrahieren oder von GitHub herunterladen.</string>
+    <string name="terminal_tutorial_1">Zuerst die Dateien an einen beliebigen Ort exportieren. Sie werden zwei Dateien finden, %1$s und %2$s.</string>
     <string name="home_terminal_description">Befehle durch Shizuku in beliebigen Terminal Anwendungen ausführen</string>
-    <string name="home_terminal_title">Benutze Shizuku in Terminal Anwendungen</string>
+    <string name="home_terminal_title">Shizuku in Terminal-Anwendungen verwenden</string>
+    <string name="terminal_tutorial_3_description">Einige Tipps: Gewähre %1$s Ausführungszugriff und füge es zu %2$s hinzu, damit du %1$s direkt verwenden kannst.</string>
 </resources>
