--- a/manager/src/main/res/values-pt-rBR/strings.xml
+++ b/manager/src/main/res/values-pt-rBR/strings.xml
@@ -46,7 +46,7 @@
     <string name="app_management_dialog_adb_is_limited_message">É bem provável que o fabricante do seu dispositivo limite a permissão do ADB.&lt;p&gt;Pode haver uma solução para seu sistema &lt;b&gt;&lt;a href=\"%1$s\"&gt;neste documento&lt;/a&gt;&lt;/b&gt;.</string>
     <string name="app_management_dialog_adb_is_limited_title">A permissão do ADB é limitada</string>
     <string name="app_management_menu_get_more">Pegue mais</string>
-    <string name="home_learn_more_description">Aprenda a desenvolver com Shizuku ou obter aplicativos usando Shizuku</string>
+    <string name="home_learn_more_description">Aprenda a desenvolver com Shizuku ou obter apps que usam o Shizuku</string>
     <string name="home_learn_more_title">Aprenda sobre Shizuku</string>
     <string name="home_app_management_view_authorized_apps">Toque para gerenciar os aplicativos autorizados</string>
     <plurals name="home_app_management_authorized_apps_count">
@@ -88,7 +88,18 @@
     <string name="home_adb_dialog_view_command_button_send">Enviar</string>
     <string name="home_adb_dialog_view_command_copy_button">Copiar</string>
     <string name="home_adb_button_view_command">Ver o comando</string>
-    <string name="home_adb_button_view_help">Leia a ajuda</string>
+    <string name="home_adb_button_view_help">Ler a ajuda</string>
     <string name="home_adb_description">Para aparelhos sem ROOT, será necessário usar o ADB para iniciar o Shizuku (requer conexão ao computador). Este processo precisa ser repetido sempre que o aparelho é reiniciado. Por favor <b><a href="%1$s">leia a ajuda</a></b>.</string>
     <string name="home_adb_title">Comece conectando-se a um computador</string>
+    <string name="terminal_tutorial_3">Finalmente, mova os arquivos para algum lugar onde seu aplicativo terminal possa acessar, você poderá usar %1$s para executar comandos através do Shizuku.</string>
+    <string name="terminal_tutorial_3_description">Algumas dicas: conceda permissão de execução a %1$s e adicione-a a %2$s, você poderá usar %1$s diretamente.</string>
+    <string name="terminal_tutorial_2_description">Por exemplo, se quiser usar o Shizuku em %1$s, você deve substituir %2$s por %3$s (%4$s é o nome de pacote de %1$s).</string>
+    <string name="terminal_tutorial_2">Agora, use algum editor de texto para abrir e editar %1$s.</string>
+    <string name="terminal_export_files">Exportar arquivos</string>
+    <string name="terminal_tutorial_1_description">Se houver arquivos com o mesmo nome na pasta selecionada, eles serão excluídos.
+\n
+\nA função de exportação usa SAF (Storage Access Framework). É relatado que a MIUI quebra as funções do SAF. Se você estiver usando a MIUI, você pode ter que extrair o arquivo do apk do Shizuku ou baixar do GitHub.</string>
+    <string name="home_terminal_description">Executar comandos pelo Shizuku no seu app de terminal preferido</string>
+    <string name="terminal_tutorial_1">Primeiro, exporte os arquivos para onde quiser. Serão dois arquivos: %1$s e %2$s.</string>
+    <string name="home_terminal_title">Usar o Shizuku em apps de terminal</string>
 </resources>
