--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -98,4 +98,8 @@
     <string name="terminal_tutorial_3">最後，將檔案移動到終端程式可以訪問的位置，您便可使用 %1$s 來透過 Shizuku 執行命令。</string>
     <string name="terminal_tutorial_3_description">一些技巧：將執行許可權授予 %1$s 並將其新增到 %2$s，您將可以直接使用 %1$s。</string>
     <string name="settings_translation_summary_percentage">" （已翻譯 %s）"</string>
+    <string name="rish_description"><![CDATA[
+透過 %1$s，您可以在任何終端程式中連線到由 Shizuku 執行的 shell 並與之互動。
+<p>有關 %1$s 的具體使用方式，點按以閱讀檔案。
+]]></string>
 </resources>
