--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="adb_pair_required">Please go through the pairing step first.</string>
     <string name="development_settings">Developer options</string>
     <string name="adb_pairing_tutorial_title">Pair Shizuku with your device</string>
+    <string name="adb_pairing_tutorial_content_enable_notification">Please enable Shizuku\'s notification permission. \"App Info\" - \"Notifications\" - \"All Shizuku notifications\"</string>
     <string name="adb_pairing_tutorial_content_start_service">Please start pairing service from \"Developer options\" - \"Wireless debugging\".</string>
     <string name="adb_pairing_tutorial_content_input_pairing_code">Tap \"Pair device with pairing code\", the system will show a dialog with a six-digit pairing code. You will be able to enter the code in Shizuku\'s notification to complete pairing.</string>
     <string name="adb_pairing_tutorial_content_bad_system">On some systems, the divider of the \"Wireless debugging\" option is removed, so you may not know you can to enter the \"Wireless debugging\" page by tapping the left part of the option.</string>
